# coremark

./: CMakeLists.txt  Makefile  core_portme.h  coremark_test
linux/: core_portme.h
